RESOLVED FIXED44616
text-shadow is not respected in RenderSVGText::repaintRectInLocalCoordinates()
https://bugs.webkit.org/show_bug.cgi?id=44616
Summary text-shadow is not respected in RenderSVGText::repaintRectInLocalCoordinates()
Nikolas Zimmermann
Reported 2010-08-25 09:26:09 PDT
CSS transition + text-shadow highlights repaint bugs, as the text-shadow is not respected in RenderSVGText::repaintRectInLocalCoordinates(). Fix that, and also cleanup the code (FIXME in SVGRenderStyle) -> move the inflateForShadow() function in ShadowData.
Attachments
Patch (180.33 KB, patch)
2010-08-26 03:04 PDT, Nikolas Zimmermann
krit: review+
Nikolas Zimmermann
Comment 1 2010-08-26 03:04:16 PDT
WebKit Review Bot
Comment 2 2010-08-26 03:07:13 PDT
Attachment 65538 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/rendering/style/ShadowData.cpp:28: Use 'using namespace std;' instead of 'using std::min;'. [build/using_std] [4] WebCore/rendering/style/ShadowData.cpp:29: Use 'using namespace std;' instead of 'using std::max;'. [build/using_std] [4] Total errors found: 2 in 16 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dirk Schulze
Comment 3 2010-08-26 03:23:04 PDT
Comment on attachment 65538 [details] Patch r=me with fixed style errors from style bot.
Nikolas Zimmermann
Comment 4 2010-08-26 03:28:12 PDT
Landed in r66093.
WebKit Review Bot
Comment 5 2010-08-26 04:34:35 PDT
http://trac.webkit.org/changeset/66093 might have broken GTK Linux 64-bit Debug The following changes are on the blame list: http://trac.webkit.org/changeset/66093 http://trac.webkit.org/changeset/66094
Note You need to log in before you can comment on or make changes to this bug.