2010-08-26  Nikolas Zimmermann  <nzimmermann@rim.com>

Reviewed by Dirk Schulze.

        text-shadow is not respected in RenderSVGText::repaintRectInLocalCoordinates()
        https://bugs.webkit.org/show_bug.cgi?id=44616

        Centralize code to calculate the shadow extents in ShadowData.
        Respect textShadow() when calculating the repaint rect of RenderSVGText.

        Tests: svg/css/composite-shadow-text.svg
               transitions/svg-text-shadow-transition.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::adjustRectForOutlineAndShadow):
        * rendering/RenderSVGRoot.cpp:
        (WebCore::RenderSVGRoot::repaintRectInLocalCoordinates):
        (WebCore::RenderSVGRoot::computeRectForRepaint):
        * rendering/RenderSVGText.cpp:
        (WebCore::RenderSVGText::repaintRectInLocalCoordinates):
        * rendering/SVGRenderSupport.cpp:
        (WebCore::SVGRenderSupport::computeRectForRepaint):
        (WebCore::SVGRenderSupport::prepareToRenderSVGContent):
        (WebCore::SVGRenderSupport::finishRenderSVGContent):
        (WebCore::SVGRenderSupport::intersectRepaintRectWithResources):
        * rendering/style/SVGRenderStyle.cpp:
        * rendering/style/SVGRenderStyle.h:
        * rendering/style/ShadowData.cpp:
        (WebCore::calculateShadowExtent):
        (WebCore::ShadowData::adjustRectForShadow):
        * rendering/style/ShadowData.h:

2010-08-26  Nikolas Zimmermann  <nzimmermann@rim.com>

        Reviewed by Dirk Schulze.

        text-shadow is not respected in RenderSVGText::repaintRectInLocalCoordinates()
        https://bugs.webkit.org/show_bug.cgi?id=44616

        * platform/mac/svg/css/composite-shadow-text-expected.checksum: Added.
        * platform/mac/svg/css/composite-shadow-text-expected.png: Added.
        * platform/mac/svg/css/composite-shadow-text-expected.txt: Added.
        * platform/mac/svg/css/text-shadow-multiple-expected.txt:
        * platform/mac/transitions/svg-text-shadow-transition-expected.checksum: Added.
        * platform/mac/transitions/svg-text-shadow-transition-expected.png: Added.
        * platform/mac/transitions/svg-text-shadow-transition-expected.txt: Added.
        * svg/css/composite-shadow-text.svg: Added.
        * transitions/svg-text-shadow-transition.html: Added.
        * transitions/transition-test-helpers.js: Cleanup code, accept negative offsets in the regexp for shadow.


Canonical link: https://commits.webkit.org/56865@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66093 268f45cc-cd09-0410-ab3c-d52691b4dbfc