WebCore/rendering/RenderObject.cpp
@@ -2553,27 +2553,11 @@ void RenderObject::adjustRectForOutlineAndShadow(IntRect& rect) const
 {
     int outlineSize = outlineStyleForRepaint()->outlineSize();
     if (const ShadowData* boxShadow = style()->boxShadow()) {
-        int shadowLeft = 0;
-        int shadowRight = 0;
-        int shadowTop = 0;
-        int shadowBottom = 0;
+        boxShadow->adjustRectForShadow(rect, outlineSize);
+        return;
+    }
 
-        do {
-            if (boxShadow->style() == Normal) {
-                shadowLeft = min(boxShadow->x() - boxShadow->blur() - boxShadow->spread() - outlineSize, shadowLeft);
-                shadowRight = max(boxShadow->x() + boxShadow->blur() + boxShadow->spread() + outlineSize, shadowRight);
-                shadowTop = min(boxShadow->y() - boxShadow->blur() - boxShadow->spread() - outlineSize, shadowTop);
-                shadowBottom = max(boxShadow->y() + boxShadow->blur() + boxShadow->spread() + outlineSize, shadowBottom);
-            }
-
-            boxShadow = boxShadow->next();
-        } while (boxShadow);
-
-        rect.move(shadowLeft, shadowTop);
-        rect.setWidth(rect.width() - shadowLeft + shadowRight);
-        rect.setHeight(rect.height() - shadowTop + shadowBottom);
-    } else
-        rect.inflate(outlineSize);
+    rect.inflate(outlineSize);
 }
 
 AnimationController* RenderObject::animation() const
