WebCore/rendering/style/SVGRenderStyle.cpp
@@ -215,48 +215,6 @@ StyleDifference SVGRenderStyle::diff(const SVGRenderStyle* other) const
     return StyleDifferenceEqual;
 }
 
-static void getSVGShadowExtent(ShadowData* shadow, float& top, float& right, float& bottom, float& left)
-{
-    top = 0.0f;
-    right = 0.0f;
-    bottom = 0.0f;
-    left = 0.0f;
-
-    float blurAndSpread = shadow->blur() + shadow->spread();
-
-    top = min(top, shadow->y() - blurAndSpread);
-    right = max(right, shadow->x() + blurAndSpread);
-    bottom = max(bottom, shadow->y() + blurAndSpread);
-    left = min(left, shadow->x() - blurAndSpread);
-}
-
-void SVGRenderStyle::inflateForShadow(IntRect& repaintRect) const
-{
-    ShadowData* svgShadow = shadow();
-    if (!svgShadow)
-        return;
-
-    FloatRect repaintFloatRect = FloatRect(repaintRect);
-    inflateForShadow(repaintFloatRect);
-    repaintRect = enclosingIntRect(repaintFloatRect);
-}
-
-void SVGRenderStyle::inflateForShadow(FloatRect& repaintRect) const
-{
-    ShadowData* svgShadow = shadow();
-    if (!svgShadow)
-        return;
-
-    float shadowTop;
-    float shadowRight;
-    float shadowBottom;
-    float shadowLeft;
-    getSVGShadowExtent(svgShadow, shadowTop, shadowRight, shadowBottom, shadowLeft);
-
-    repaintRect.move(shadowLeft, shadowTop);
-    repaintRect.setSize(repaintRect.size() + FloatSize(shadowRight - shadowLeft, shadowBottom - shadowTop));
-}
-
 }
 
 #endif // ENABLE(SVG)
