WebCore/rendering/style/SVGRenderStyle.h
@@ -47,10 +47,6 @@ public:
     bool inheritedNotEqual(const SVGRenderStyle*) const;
     void inheritFrom(const SVGRenderStyle*);
 
-    // FIXME: These functions should move to ShadowData.
-    void inflateForShadow(IntRect&) const;
-    void inflateForShadow(FloatRect&) const;
-
     StyleDifference diff(const SVGRenderStyle*) const;
 
     bool operator==(const SVGRenderStyle&) const;
